Footer changes from Colleen's feedback

--- a/footer.html
+++ b/footer.html
@@ -18,7 +18,7 @@
                                     Contact Tracing Map
                                 </li>
                                 <li>
-                                    Automatic Alerts
+                                    Automatic Alert System
                                 </li>
                                 <li>
                                     Data Visualisation Dashboards
@@ -35,24 +35,25 @@
                     <h6>
                         Acknowledgements
                     </h6>
-                    <p class="text-justify"><small>
+                    <p class="text-justify text-light"><small>
                         <ul>
                             <li>
-                                ANU Research School of Population Health;
+                                <a href="https://rsph.anu.edu.au/" target="_blank" class = "text-light">ANU Research School of Population Health</a>;
                             </li>
                             <li>
-                                APPRISE;
+                                <a href="https://sii.anu.edu.au/" target="_blank" class = "text-light">ANU Software Innovation Institute</a>;
                             </li>
                             <li>
-                                ANU Software Innovation Institute;
+                                <a href="http://graphc.anu.edu.au/" target="_blank" class = "text-light">ANU GRAPHC</a>;
                             </li>
                             <li>
-                                ANU GRAPHC;
+			                    <a href="https://public-health.uq.edu.au/" target="_blank" class = "text-light">UQ School of Public Health</a>;
                             </li>
-                            <li>
-			                    University of Queensland
-                            </li>
-                        </ul>                    
+                        </ul>    
+                        
+                        CRISPER is funded by <a href="https://www.apprise.org.au/" target="_blank" class = "text-light">APPRISE</a> and 
+                        the <a href="https://www.nhmrc.gov.au/funding/find-funding/centres-research-excellence" target="_blank" class = "text-light">NHMRC Centre of Research Excellence</a>. <br><br>
+
                         ANU Software Innovation Institute software engineers, designers, and data scientists include: <br> 
                         Graham Williams, Jingjing Shi, Haotian Weng, Alex Sneddon, Mike Purcell, Kieran Ricardo, Jess Moore, Mark Burgess, Septian Razi and Zeyu Gao.
                     </small> </p>
