--- a/header.html
+++ b/header.html
@@ -4,7 +4,7 @@
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark border-bottom border-warning border-4">
         <div class="container">
             <div class="col-lg-3">
-                <a href="" class="navbar-brand">
+                <a href="index.html" class="navbar-brand">
                     <img src="Assets/Logos/CRISPER_Text_White.svg" alt="CRISPER LOGO WHITE" srcset="" class="img-fluid">
                 </a>
             </div>
