Changed Screenshots in Dashboards to be more appropriate

--- a/dashboards.html
+++ b/dashboards.html
@@ -48,7 +48,7 @@
                                     <div class="card h-100 my-1 text-decoration-none text-dark" style="width: 100%;">
                                         <a href="https://experience.arcgis.com/experience/1606ae83c91e4dc68c95170e7f37e9e9" class = "text-decoration-none text-dark">
                                         <div class="ratio ratio-16x9">
-                                            <img src="https://www.arcgis.com/sharing/rest/content/items/02d54f961ba94f1bb4d531a7d321b283/resources/images/templates/1624505049179.jpeg" class = "border-bottom border-warning border-4">
+                                            <img src="Assets/Screenshots/ContactTracingMap_filter.png" class = "border-bottom border-warning border-4">
                                         </div>
                                         <div class="card-body">
                                         <h4 class="card-title lh-base mb-3">CRISPER Contact Tracing Alerts Web App</h4>
@@ -127,7 +127,7 @@
                             <div class="col-md-6 col-sm-12">
                                 <a href="https://graphc.maps.arcgis.com/apps/dashboards/465d9e0cd44247b488b8431a56691417" class="card h-100 my-1 text-decoration-none text-dark" style="width: 100%;">
                                     <div class="ratio ratio-16x9">
-                                        <img title="CRISPER National Summary Dashboard" src="https://www.arcgis.com/sharing/rest/content/items/02d54f961ba94f1bb4d531a7d321b283/resources/images/widget_319/1624504251013.png" class="w-100 h-100 border-bottom border-warning border-4" alt="CRISPER National Summary Dashboard" style="display: block; object-fit: cover; object-position: 50% 50%;">
+                                        <img title="CRISPER National Summary Dashboard" src="Assets/Screenshots/NationalSummary_filter.png" class="w-100 h-100 border-bottom border-warning border-4" alt="CRISPER National Summary Dashboard" style="display: block; object-fit: cover; object-position: 50% 50%;">
                                     </div>
                                     <div class="card-body">
                                       <h4 class="card-title lh-base mb-3">CRISPER National Summary Dashboard</h4>
@@ -140,7 +140,7 @@
                             <div class="col-md-6 col-sm-12">
                                 <a href="https://graphc.maps.arcgis.com/apps/dashboards/74e69c2ab40f41c892a652e95373622c" class="card h-100 my-1 text-decoration-none text-dark" style="width: 100%;">
                                     <div class="ratio ratio-16x9">
-                                        <img title="Interactive Mapping Cases By Postcode (NSW ony)" src="https://www.arcgis.com/sharing/rest/content/items/02d54f961ba94f1bb4d531a7d321b283/resources/images/widget_314/1624502624993.png" alt="Interactive Mapping Cases By Postcode (NSW ony)" class = "border-bottom border-warning border-4">
+                                        <img title="Interactive Mapping Cases By Postcode (NSW ony)" src="Assets/Screenshots/CasesByPostcode_filter.png" alt="Interactive Mapping Cases By Postcode (NSW ony)" class = "border-bottom border-warning border-4">
                                     </div>
                                     <div class="card-body">
                                       <h4 class="card-title lh-base mb-3">Interactive Mapping Tool - Cases by Postcode (NSW & VIC only)</h4>
@@ -164,7 +164,7 @@
                             <div class="col-md-6 col-sm-12">
                                 <a href="https://graphc.maps.arcgis.com/apps/dashboards/743fab0c70204aefa812de611cb7999b" class="card h-100 my-1 text-decoration-none text-dark" style="width: 100%;">
                                     <div class="ratio ratio-16x9">
-                                        <img title="Interactive Mapping  Tests by Postcode (NSW only) &amp; Contact Tracing Locations" src="https://www.arcgis.com/sharing/rest/content/items/02d54f961ba94f1bb4d531a7d321b283/resources/images/widget_317/1624503507181.png" class="w-100 h-100 border-bottom border-warning border-4" alt="Interactive Mapping Tests by Postcode (NSW only) &amp; Contact Tracing Locations" style="display: block; object-fit: cover; object-position: 50% 50%;">
+                                        <img title="Interactive Mapping  Tests by Postcode (NSW only) &amp; Contact Tracing Locations" src="Assets/Screenshots/TestsByPostcode_filter.png" class="w-100 h-100 border-bottom border-warning border-4" alt="Interactive Mapping Tests by Postcode (NSW only) &amp; Contact Tracing Locations" style="display: block; object-fit: cover; object-position: 50% 50%;">
                                     </div>
                                     <div class="card-body">
                                       <h4 class="card-title lh-base mb-3"> Interactive Mapping Tool - Tests by Postcode (NSW only) & Contact Tracing Alert Locations</h4>
@@ -190,7 +190,7 @@
                             <div class="col-md-6 col-sm-12">
                                 <a href="https://graphc.maps.arcgis.com/apps/dashboards/8a59e93e28a54298857e53d83dd158be" class="card h-100 my-1 text-decoration-none text-dark" style="width: 100%;">
                                     <div class="ratio ratio-16x9 ">
-                                        <img src="https://www.arcgis.com/sharing/rest/content/items/02d54f961ba94f1bb4d531a7d321b283/resources/images/templates/1624505621145.jpeg" class = "border-bottom border-warning border-4">
+                                        <img src="Assets/Screenshots/NSWPHU_filter.png" class = "border-bottom border-warning border-4">
                                     </div>
                                     <div class="card-body">
                                       <h4 class="card-title lh-base mb-3">NSW COVID-19 Cases by Public Health Unit (PHU)</h4>
