fixed thumbnails in home page

--- a/data_engine.html
+++ b/data_engine.html
@@ -130,9 +130,9 @@
                 </div>
                 <div class="col-md p-4">
                     <p class="text-start text-justify ">
-                        The CRISPER Data Engine can utilise both public data and private data provided by jurisdictional authorities. 
-                        All private data is managed on secure servers that utilise a new differential privacy capability, RelM implemented as open source by the Software Innovation Institute. 
-                        Private data is released publicly according to a mathematically rigorous Privacy Budget formulation. Such data is then accessed for use in the CRISPER Dashboards and the CRISPER Alerts through the CRISPER Data Engine.
+                        The CRISPER Data Engine can utilise both public data and confidential data provided by jurisdictional authorities. 
+                        All confidential data is managed on secure servers that utilise a new differential privacy capability with RelM implemented as open source by the Software Innovation Institute. 
+                        Confidential data is released publicly according to a mathematically rigorous Privacy Budget formulation. Such data is then accessed for use in the CRISPER Dashboards and the CRISPER Alerts through the CRISPER Data Engine.
                     </p>
                 </div>
     
@@ -154,15 +154,18 @@
                 </div>
                 <div class="col-md p-4">
                     <p class="text-start text-justify">
-                        The data used by the Alerts Engine is collected daily from different government sources. It is only as up-to-date and as accurate as the agencies have made available and is dependent on their updates.
+                        The data used by the Data Engine is collected daily from different government sources. It is only as up-to-date and as accurate as the agencies have made available and is dependent on their updates.
                         The types of data collected include, for example, daily covid cases by postcode, daily covid testing numbers by postcode, and contact tracing locations.
                     </p>
                     <ul class="list-unstyled">
-                        <li><a href="table/nsw_postcode_cases"> nsw_postcode_cases</a> -
-                             <a href="https://data.nsw.gov.au/data/dataset/covid-19-cases-by-location">https://data.nsw.gov.au/data/dataset/covid-19-cases-by-location</a></li>
-                            <li><a href="table/vic_active_cases_postcode">
-                                vic_active_cases_postcode</a>
-                                - <a href="https://www.dhhs.vic.gov.au/victorian-coronavirus-covid-19-data">https://www.dhhs.vic.gov.au/victorian-coronavirus-covid-19-data</a></li>
+                        <li>
+                            <a href="table/nsw_postcode_cases"> nsw_postcode_cases</a> -
+                            <a href="https://data.nsw.gov.au/data/dataset/covid-19-cases-by-location">https://data.nsw.gov.au/data/dataset/covid-19-cases-by-location</a>
+                        </li>   
+                        <li>
+                            <a href="table/vic_active_cases_postcode"> vic_active_cases_postcode</a> - 
+                            <a href="https://www.dhhs.vic.gov.au/victorian-coronavirus-covid-19-data">https://www.dhhs.vic.gov.au/victorian-coronavirus-covid-19-data</a>
+                        </li>
                     </ul>
                 </div>
 
