--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                             <div class="col-md-6 col-sm-12">
                                     <a href="contact_tracing_map.html" class="card h-100 my-1 text-decoration-none text-dark" style="width: 100%;">
                                         <div class="ratio ratio-16x9">
-                                            <img src="Assets/Contact Tracing.png" class="card-img-top border-bottom border-warning border-4" alt="...">
+                                            <img src="Assets/Contact Tracing_filter.png" class="card-img-top border-bottom border-warning border-4" alt="...">
                                         </div>
                                         <div class="card-body">
                                         <h5 class="card-title lh-base">Map of Current COVID-19 Contact Tracing Alert Locations</h5>
@@ -84,7 +84,7 @@
                             <div class="col-md-6 col-sm-12">
                                 <a href="automated_alerts.html" class="card h-100 my-1 text-decoration-none text-dark" style="width: 100%;">
                                     <div class="ratio ratio-16x9">
-                                      <img src="Assets/Automated ALert.png" class="card-img-top border-bottom border-warning border-4" alt="...">
+                                      <img src="Assets/automated_alerts_filter.png" class="card-img-top border-bottom border-warning border-4" alt="...">
                                     </div>
                                     <div class="card-body">
                                       <h5 class="card-title">Automated Alerts</h5>
@@ -99,7 +99,7 @@
                             <div class="col-md-6 col-sm-12">
                                 <a href="dashboards.html" class="card h-100 my-1 text-decoration-none text-dark" style="width: 100%;">
                                     <div class="ratio ratio-16x9">
-                                        <img src="Assets/Dashboards.png" class="card-img-top border-bottom border-warning border-4" alt="...">
+                                        <img src="Assets/Screenshots/NationalSummary_filter.png" class="card-img-top border-bottom border-warning border-4" alt="...">
                                     </div>
                                     <div class="card-body">
                                       <h5 class="card-title">Other Dashboards</h5>
@@ -113,7 +113,7 @@
                             <div class="col-md-6 col-sm-12">
                                 <a href="data_engine.html" class="card h-100 my-1 text-decoration-none text-dark" style="width: 100%;">
                                     <div class="ratio ratio-16x9">
-                                        <img src="Assets/Code_Stock_Photo(From Pexels).jpg" class="card-img-top border-bottom border-warning border-4" alt="...">
+                                        <img src="Assets/Code_Stock_Photo(From Pexels)_filter.jpg" class="card-img-top border-bottom border-warning border-4" alt="...">
                                     </div>
                                     <div class="card-body">
                                       <h5 class="card-title">Data Engine</h5>
