fixed footer issues

--- a/footer.html
+++ b/footer.html
@@ -94,9 +94,9 @@
         <!-- ---------------------------- -->
 
         <div class="row justify-content-center mt-4 mb-3">
-            <div class="col-md-2 col-7 text-center">
+            <a href="index.html" class="col-7 col-md-2  text-center">
                 <img src="Assets/Logos/CRISPER_Text_White.svg" alt="CRISPER LOGO"class="img-fluid mx-auto">
-            </div>
+            </a>
         </div>
 
         <div class="row">
@@ -106,7 +106,7 @@
                         <img src="Assets/Logos/ANU_Logo_Colour_White.png" alt="ANU Logo" class="img-fluid mx-auto">
                     </a>
                     <a href="https://sii.anu.edu.au/" target="_blank" class="col-md">
-                        <img src="Assets/Logos/SoftwareInnovationInstitute_White_small.png" alt="SII Logo" class="img-fluid mx-auto w-75">
+                        <img src="Assets/Logos/SoftwareInnovationInstitute_White_small.png" alt="SII Logo" class="img-fluid mx-auto">
                     </a>
                     <a href="http://graphc.anu.edu.au/" target="_blank" class="col-md">
                         <img src="Assets/Logos/GRAPHC_Logo_Small.png" alt="GRAPHC Logo" class="img-fluid">
