saving in case we want to use cards for the canonical state dashboards

--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
                 <div class="col-md-4">
                     <h3>CRISPER</h3>
                     <div class="list-group list-group-flush">
-                        <a href="https://mobile.crisper.net.au" class="list-group-item list-group-item-action">Contact Tracing Map</a>
+                        <a href="contact_tracing_map.html" class="list-group-item list-group-item-action">Contact Tracing Map</a>
                         <!-- a href="https://experience.arcgis.com/experience/1606ae83c91e4dc68c95170e7f37e9e9" class="list-group-item list-group-item-action">Smartphone Application Contact Tracing Map</a-->
                         <a href="automated_alerts.html" class="list-group-item list-group-item-action">Automated Alerts</a>
                         <a href="dashboards.html" class="list-group-item list-group-item-action">Other Dashboards</a>
                         <a href="data_engine.html" class="list-group-item list-group-item-action">Data Engine</a>
-                        <a href="" class="list-group-item list-group-item-action">Mobile App</a>
+                        <a href="mobile_contact_tracing_map.html" class="list-group-item list-group-item-action">Mobile App</a>
                         <br>
                         <br>
                     <h3>Resources</h3>
