finished buttons for canonical state dashboards

--- a/data_sources.html
+++ b/data_sources.html
@@ -43,86 +43,109 @@
         <div class="container">
             <h2 class="py-3">Current COVID-19 Status</h2>
 
-            <div class="row row-cols-1 row-cols-md-2 g-4">
+            <div class="row g-4">
 
-                    <div class="col-md-3 col-sm-12">
-                            <a href="https://www.covid19.act.gov.au/updates/act-covid-19-statistics" type="_blank" class="card h-100 my-1 text-decoration-none text-dark" style="width: 100%;">
+                
+                    <div class="col-md-4 col-sm-12">
+                            <a href="https://www.covid19.act.gov.au/updates/act-covid-19-statistics" type="_blank" class="btn btn-dark btn-lg" style="width: 100%;">
                                 <!-- <div class="ratio ratio-16x9">
                                     <img src="Assets/Contact Tracing.png" class="card-img-top" alt="...">
                                 </div> -->
-                                <div class="card-body">
-                                <h5 class="card-title text-center">Australian Capital Territory</h5>
-                                </div>
+                                <!-- <div class="card-body"> -->
+                                <!-- <h5 class="card-title text-center">Australian Capital Territory</h5> -->
+                                <!-- </div> -->
+                                Australian Capital Territory
                             </a>
                     </div>
-                    <div class="col-md-3 col-sm-12">
-                        <a href="https://www.health.nsw.gov.au/Infectious/covid-19/Pages/stats-nsw.aspx" type="_blank" class="card h-100 my-1 text-decoration-none text-dark" style="width: 100%;">
+                    <div class="col-md-4 col-sm-12">
+                        <a href="https://www.health.nsw.gov.au/Infectious/covid-19/Pages/stats-nsw.aspx" type="_blank" class="btn btn-dark btn-lg" style="width: 100%;">
                             <!-- <div class="ratio ratio-16x9">
                                 <img src="Assets/Contact Tracing.png" class="card-img-top" alt="...">
                             </div> -->
-                            <div class="card-body">
-                            <h5 class="card-title text-center">New South Wales</h5>
-                            </div>
+                            <!-- <div class="card-body"> -->
+                            <!-- <h5 class="card-title text-center">New South Wales</h5> -->
+                            <!-- </div> -->
+                            New South Wales
                         </a>
                     </div>
-                    <div class="col-md-3 col-sm-12">
-                        <a href="https://coronavirus.nt.gov.au/current-status" type="_blank" class="card h-100 my-1 text-decoration-none text-dark" style="width: 100%;">
+                    <div class="col-md-4 col-sm-12">
+                        <a href="https://coronavirus.nt.gov.au/current-status" type="_blank" class="btn btn-dark btn-lg" style="width: 100%;">
                             <!-- <div class="ratio ratio-16x9">
                                 <img src="Assets/Contact Tracing.png" class="card-img-top" alt="...">
                             </div> -->
-                            <div class="card-body">
-                            <h5 class="card-title text-center">Northern Territory</h5>
-                            </div>
+                            <!-- <div class="card-body"> -->
+                            <!-- <h5 class="card-title text-center">Northern Territory</h5> -->
+                            <!-- </div> -->
+                            Northern Territory
                         </a>
                     </div>
-                    <div class="col-md-3 col-sm-12">
-                        <a href="https://www.qld.gov.au/health/conditions/health-alerts/coronavirus-covid-19/current-status/statistics" type="_blank" class="card h-100 my-1 text-decoration-none text-dark" style="width: 100%;">
+                    <div class="col-md-4 col-sm-12">
+                        <a href="https://www.qld.gov.au/health/conditions/health-alerts/coronavirus-covid-19/current-status/statistics" type="_blank" class="btn btn-dark btn-lg" style="width: 100%;">
                             <!-- <div class="ratio ratio-16x9">
                                 <img src="Assets/Contact Tracing.png" class="card-img-top" alt="...">
                             </div> -->
-                            <div class="card-body">
-                            <h5 class="card-title text-center">Queensland</h5>
-                            </div>
+                            <!-- <div class="card-body"> -->
+                            <!-- <h5 class="card-title text-center">Queensland</h5> -->
+                            <!-- </div> -->
+                            Queensland
                         </a>
                     </div>
-                    <div class="col-md-3 col-sm-12">
-                        <a href="https://www.covid-19.sa.gov.au/home/dashboard" type="_blank" class="card h-100 my-1 text-decoration-none text-dark" style="width: 100%;">
+                    <div class="col-md-4 col-sm-12">
+                        <a href="https://www.covid-19.sa.gov.au/home/dashboard" type="_blank" class="btn btn-dark btn-lg" style="width: 100%;">
                             <!-- <div class="ratio ratio-16x9">
                                 <img src="Assets/Contact Tracing.png" class="card-img-top" alt="...">
                             </div> -->
-                            <div class="card-body">
-                            <h5 class="card-title text-center">South Australia</h5>
-                            </div>
+                            <!-- <div class="card-body"> -->
+                            <!-- <h5 class="card-title text-center">South Australia</h5> -->
+                            <!-- </div> -->
+                            South Australia
                         </a>
                     </div>
-                    <div class="col-md-3 col-sm-12">
-                        <a href="https://www.coronavirus.tas.gov.au/facts/tasmanian-statistics" type="_blank" class="card h-100 my-1 text-decoration-none text-dark" style="width: 100%;">
+                    <div class="col-md-4 col-sm-12">
+                        <a href="https://www.coronavirus.tas.gov.au/facts/tasmanian-statistics" type="_blank" class="btn btn-dark btn-lg" style="width: 100%;">
                             <!-- <div class="ratio ratio-16x9">
                                 <img src="Assets/Contact Tracing.png" class="card-img-top" alt="...">
                             </div> -->
-                            <div class="card-body">
-                            <h5 class="card-title text-center">Tasmania</h5>
-                            </div>
+                            <!-- <div class="card-body"> -->
+                            <!-- <h5 class="card-title text-center">Tasmania</h5> -->
+                            <!-- </div> -->
+                            Tasmania
                         </a>
                     </div>
-                    <div class="col-md-3 col-sm-12">
-                        <a href="https://www.dhhs.vic.gov.au/victorian-coronavirus-covid-19-data" type="_blank" class="card h-100 my-1 text-decoration-none text-dark" style="width: 100%;">
+                    <div class="col-md-4 col-sm-12">
+                        <a href="https://www.dhhs.vic.gov.au/victorian-coronavirus-covid-19-data" type="_blank" class="btn btn-dark btn-lg" style="width: 100%;">
                             <!-- <div class="ratio ratio-16x9">
                                 <img src="Assets/Contact Tracing.png" class="card-img-top" alt="...">
                             </div> -->
-                            <div class="card-body">
-                            <h5 class="card-title text-center">Victoria</h5>
-                            </div>
+                            <!-- <div class="card-body"> -->
+                            <!-- <h5 class="card-title text-center">Victoria</h5> -->
+                            <!-- </div> -->
+                            Victoria
                         </a>
                     </div>
-                    <div class="col-md-3 col-sm-12">
-                        <a href="https://experience.arcgis.com/experience/359bca83a1264e3fb8d3b6f0a028d768" type="_blank" class="card h-100 my-1 text-decoration-none text-dark" style="width: 100%;">
+                    <div class="col-md-4 col-sm-12">
+                        <a href="https://experience.arcgis.com/experience/359bca83a1264e3fb8d3b6f0a028d768" type="_blank" class="btn btn-dark btn-lg" style="width: 100%;">
                             <!-- <div class="ratio ratio-16x9">
                                 <img src="Assets/Contact Tracing.png" class="card-img-top" alt="...">
                             </div> -->
-                            <div class="card-body">
-                            <h5 class="card-title text-center">Western Australia</h5>
-                            </div>
+                            <!-- <div class="card-body"> -->
+                            <!-- <h5 class="card-title text-center">Western Australia</h5> -->
+                            <!-- </div> -->
+
+                            Western Australia
+                        </a>
+                    </div>
+
+                    <div class="col-md-4 col-sm-12">
+                        <a href="https://www.health.gov.au/news/health-alerts/novel-coronavirus-2019-ncov-health-alert/coronavirus-covid-19-case-numbers-and-statistics" type="_blank" class="btn btn-dark btn-lg" style="width: 100%;">
+                            <!-- <div class="ratio ratio-16x9">
+                                <img src="Assets/Contact Tracing.png" class="card-img-top" alt="...">
+                            </div> -->
+                            <!-- <div class="card-body"> -->
+                            <!-- <h5 class="card-title text-center">Western Australia</h5> -->
+                            <!-- </div> -->
+
+                            Australia-Wide
                         </a>
                     </div>
 
