few minor tweaks with some pages

--- a/data_engine.html
+++ b/data_engine.html
@@ -40,17 +40,17 @@
     <!-- INTRO -->
     <!-- ---------------------- -->
     <section>
-        <div class="container-fluid p-0 ">
+        <div class="container-fluid ">
             <div class="row align-items-center g-5">
-                <div class="col-6">
-                    <img src="Assets/Code_Stock_Photo(From Pexels).jpg" class="img-fluid m-3 rounded-3" alt="...">
+                <div class="col-md-7">
+                    <img src="Assets/Code_Stock_Photo(From Pexels).jpg" class="img-fluid m-md-3 mt-xs-2 rounded-3" alt="...">
                 </div>
-                <div class="col-4">
+                <div class="col-md-4 p-5">
                     <h1>
                         Data Engine
-		  </h1>
-		  <br><br>
-		  <p>
+                        </h1>
+                        <br><br>
+                        <p>
 		  
                         Powering the Contact Tracing Map, the
                         Automated Alerts, and the Dashboards, the data
@@ -62,13 +62,12 @@
                         implemented to parse the different data
                         formats.  </p>
 
-		  <p> The data engine is also available to independent
-                        developers, including government. It is hosted
-                        by National Computational Infrastructure at
-                        the Australian National University.  </p>
+                        <p> The data engine is also available to independent
+                            developers, including government. It is hosted
+                            by National Computational Infrastructure at
+                            the Australian National University.  </p>
 
-		</div>
-                
+		        </div>
             </div>
         </div>
     </section>
@@ -167,6 +166,8 @@
                             <a href="https://www.dhhs.vic.gov.au/victorian-coronavirus-covid-19-data">https://www.dhhs.vic.gov.au/victorian-coronavirus-covid-19-data</a>
                         </li>
                     </ul>
+
+                    <p>Find our complete sources <a href="data_sources.html">here</a> </p>
                 </div>
 
             </div>
