--- a/automated_alerts.html
+++ b/automated_alerts.html
@@ -41,10 +41,10 @@
     <section>
         <div class="container-fluid p-0 ">
             <div class="row align-items-center g-5">
-                <div class="col-6">
-                    <img src="Assets/covid_pexels-photo-3970332.jpeg" class="img-fluid m-3 rounded-3" alt="...">
+                <div class="col-md-7">
+                    <img src="Assets/covid_pexels-photo-3970332.jpeg" class="img-fluid m-md-3 mt-xs-2 rounded-3" alt="...">
                 </div>
-                <div class="col-4">
+                <div class="col-md-4 p-5">
                     <h1>
                         Automated Alerts
 		  </h1>
