several mobile optimisations

--- a/contact_tracing_map.html
+++ b/contact_tracing_map.html
@@ -36,7 +36,7 @@
     <!-- ---------------------- -->
     <!-- ARC GIS  -->
     <!-- ---------------------- -->
-    <section class="p-5">
+    <section class="p-md-5">
         <div class="container-fluid p-0 ">
             <div class="row align-items-center g-5">
                 <div class="col-md-8">
@@ -52,7 +52,7 @@
                     <!--img src="Assets/Contact Tracing.png" alt=""--> 
                 </div> 
 
-                <div class="col-md-4"> 
+                <div class="col-md-4 p-5"> 
                     <h1> Contact Tracing Alert Locations Map </h1>
                     <br><br> 
                     <p>The map shows all current contact tracing
