--- a/data_sources.html
+++ b/data_sources.html
@@ -158,7 +158,9 @@
     <section>
         <div class="container py-5">
             <h2 class="py-3">Sources</h2>
-            <table class="table table-warning table-striped table align-middle">
+            <div class="table-responsive">
+
+            <table class="table table-warning table-striped table align-middle table-responsive">
 
                 <tbody>
                     <tr>
@@ -264,6 +266,7 @@
 
                 </tbody>
               </table>
+            </div>
               
         </div>
     </section>
