--- a/dashboards.html
+++ b/dashboards.html
@@ -36,10 +36,7 @@
     <!-- ---------------------- -->
     <!-- CARDS -->
     <!-- ---------------------- -->
-    <section class="p-5">
-        <div class="container">
-            <div class="row  g-4">
-                <div class="col-md">
+    <section class="p-md-5 py-3">
                     <div class="container">
                         <div class="row row-cols-1 row-cols-md-2 g-4">
 
@@ -121,10 +118,7 @@
 
                         </div>
                     </div>
-                </div>
-                
-            </div>
-        </div>
+
     </section>
 
 
