Added basic about us page and its reference in the footer

--- a/footer.html
+++ b/footer.html
@@ -54,6 +54,7 @@
                         CRISPER is funded by <a href="https://www.apprise.org.au/" target="_blank" class = "text-light">APPRISE</a> and 
                         the <a href="https://www.nhmrc.gov.au/funding/find-funding/centres-research-excellence" target="_blank" class = "text-light">NHMRC Centre of Research Excellence</a>. <br><br>
 
+                        Find out more <a href="about_us.html" class = "text-light">about us</a>.
                         <!-- ANU Software Innovation Institute software engineers, designers, and data scientists include: <br> 
                         Graham Williams, Jingjing Shi, Haotian Weng, Alex Sneddon, Mike Purcell, Kieran Ricardo, Jess Moore, Mark Burgess, Septian Razi and Zeyu Gao. -->
                     </small> </p>
