Fix bad link to mobile.

--- a/contact_tracing_map.html
+++ b/contact_tracing_map.html
@@ -72,7 +72,7 @@
                         visualise areas with multiple alerts. The Web App for
                         <b>Smart Phones</b> can be installed as an App on
                         your smart phone by loading the URL
-                        <a href ="mobile.crisper.net.au" ><i>mobile.crisper.net.au</i></a>
+                        <a href ="https://mobile.crisper.net.au" ><i>mobile.crisper.net.au</i></a>
                         into your browser and
                         then choose to <b>Add to Home Screen</b> (from the
                         browser menu). This will install an icon on your
