--- a/about_us.html
+++ b/about_us.html
@@ -52,7 +52,9 @@
 
                               <p class="card-text">
                                 ANU School of Population Health Academics include: <br><br>
-                                Jane Doe, John Doe  
+                                Professor Colleen Lau, Professor
+                                Kirsty Douglas, Assoc Professor Meru
+                                Sheel, and Dr Emma Field
                               </p>
                             </div>
                         </a>
@@ -65,7 +67,8 @@
 
                               <p class="card-text">
                                 UQ Public School of Health Academics include: <br><br>
-                                Colleen Lau  
+                                Professor Colleen Lau, Dr Amalie Dyda,
+                                Dr Luis Furuya Kanamori, Dr Lisa McHugh
                               </p>
                             </div>
                         </a>
@@ -78,7 +81,10 @@
 
                             <p class="card-text">
                               ANU Software Innovation Institute software engineers, designers, and data scientists include: <br><br>
-                              Graham Williams, Jingjing Shi, Haotian Weng, Alex Sneddon, Mike Purcell, Kieran Ricardo, Jess Moore, Mark Burgess, Septian Razi and Zeyu Gao.  
+                              Professor Graham Williams, Jingjing Shi,
+                              Haotian Weng, Alex Sneddon, Dr Mike
+                              Purcell, Kieran Ricardo, Dr Jess Moore,
+                              Dr Mark Burgess, Septian Razi and Zeyu Gao.  
                             </p>
                           </div>
                         </a>
@@ -90,7 +96,7 @@
                           <div class="card-body">
 
                             <p class="card-text">
-                              ANU GRAPHC engineers, designers, and researchers include: <br><br>
+                              ANU GRAPHC Engineers and designers include: <br><br>
                               Michael Hewett and Paul Konings
                             </p>
                           </div>
