Add About Us to short cut links

--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
                         <a href="dashboards.html" class="list-group-item list-group-item-action">Other Dashboards</a>
                         <a href="data_engine.html" class="list-group-item list-group-item-action">Data Engine</a>
                         <a href="mobile_contact_tracing_map.html" class="list-group-item list-group-item-action">Mobile App</a>
-                        <br>
+		        <a href="about_us.html" class = "list-group-item list-group-item-action">About Us</a>
+		      <br>
                         <br>
                     <h3>Resources</h3>
 
