Add details for simple web app install

--- a/mobile_contact_tracing_map.html
+++ b/mobile_contact_tracing_map.html
@@ -53,7 +53,16 @@
                 <div class="col"> 
                     <h1> Contact Tracing Alert Locations Map for Mobile</h1>
                     <br><br> 
-                    Coming soon.
+		  Coming soon.
+		  <br><br>
+		  Currently, the Web App for
+                        <b>Smart Phones</b> can be installed as an App on
+                        your smart phone by loading the URL
+                        <a href ="https://mobile.crisper.net.au" ><i>mobile.crisper.net.au</i></a>
+                        into your browser and
+                        then choose to <b>Add to Home Screen</b> (from the
+                        browser menu). This will install an icon on your
+                        home screen to directly access the App. 
                     
                 </div>
             </div>
